# gs2

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  INTEGRATION_GUIDE.md  README.md  TODO.md  X402_FACILITATORS.md  X402_INTEGRATION.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
contracts/: 2026_LANDSCAPE_ANALYSIS.md  Anchor.toml  COMPETITIVE_ANALYSIS_2026.md  Cargo.toml  DEVNET_DEPLOYMENT.md  X402_INTEGRATION_GUIDE.md  X402_MCP_MONITORING_GUIDE.md  jest.config.js  package.json  tsconfig.json
contracts/examples/x402-integration/: express-server.ts  manual-receipt-creation.ts  nextjs-api-route.ts
contracts/mcp-server/: LICENSE  README.md  package.json  test-server.ts  tsconfig.json
contracts/mcp-server/examples/: claude-desktop-config.json  vercel-ai-sdk-integration.ts
contracts/mcp-server/src/: index.ts  tools.ts
contracts/programs/identity_registry/: Cargo.toml
contracts/programs/reputation_registry/: Cargo.toml
contracts/programs/token_staking/: Cargo.toml
contracts/programs/validation_registry/: Cargo.toml
contracts/programs/vote_registry/: API_REFERENCE.md  Cargo.toml  VOTING_SYSTEM_README.md
contracts/scripts/: test-devnet-flow.ts
contracts/sdk/: README.md  package.json
contracts/sdk/src/: index.ts  receipt-creator.ts  transaction-parser.ts  x402-middleware.ts  x402-types.ts
contracts/tests/: README.md
contracts/tests/helpers/: anchor-accounts.ts  mock-x402-payment.ts
contracts/tests/integration/: x402-payment-flow.test.ts
contracts/types/: spl-token-bankrun.d.ts
(+280 files in other folders)
