[workspace]
members = [
    "programs/identity_registry",
    "programs/reputation_registry",
    "programs/validation_registry",
    "programs/vote_registry",
    "programs/token_staking"
]
resolver = "2"

# 2026 Security Best Practice: Enable overflow checks in all profiles
# This catches integer overflow/underflow at runtime instead of silently wrapping

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
