[package]
name = "vote_registry"
version = "0.1.0"
description = "Activity-weighted reputation voting and endorsement system for GhostSpeak"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vote_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
